--- a/SampleWifiConnector/app/src/main/res/layout/wifi_list_cell.xml
+++ b/SampleWifiConnector/app/src/main/res/layout/wifi_list_cell.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/wifi_list_cell"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:background="?android:attr/selectableItemBackground">
