--- a/SampleWifiConnector/app/src/main/res/layout/activity_main.xml
+++ b/SampleWifiConnector/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,76 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/status_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/status_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Last update: "
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/status_text"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_margin="8dp"
-            android:text="Status: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="----/--/-- --:--"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/status_label"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:id="@+id/separator_line_1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="16dp"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/status_container" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/radio_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/separator_line_1">
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <RadioButton
+                android:id="@+id/radio_suggestion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:checked="true"
+                android:text="Connect by WifiNetworkSuggestion (Internet)" />
+
+            <RadioButton
+                android:id="@+id/radio_specifier"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:text="Connect by WifiNetworkSpecifier (P2P)" />
+
+        </RadioGroup>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:id="@+id/separator_line_2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="16dp"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/radio_container" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/list_container"
@@ -30,7 +88,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginVertical="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/status_container">
+        app:layout_constraintTop_toBottomOf="@id/separator_line_2">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
