--- a/SampleWifiConnector/app/src/main/res/values/colors.xml
+++ b/SampleWifiConnector/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#7F7F7F</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
